fix footer size and visibilty in all devices

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,6 +3,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 60px;
     display: grid;
     grid-template-columns: auto auto auto;
     background-color: $color-nav-background;
@@ -12,8 +13,39 @@ footer {
     font-weight: bold;
     justify-content: center;
     column-gap: 50px;
+}
 
-    p {
-        font-size: 0.8em;
-    } 
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+    footer {
+        grid-template-columns: 1fr;
+    }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    footer {
+        grid-template-columns: 1fr;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    footer {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    footer {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    footer {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
